[gd_scene load_steps=11 format=2]

[ext_resource path="res://tongue test/2FA26800_c.png" type="Texture" id=1]
[ext_resource path="res://tongue test/player.gd" type="Script" id=2]
[ext_resource path="res://tongue test/Camera2D.gd" type="Script" id=3]
[ext_resource path="res://tongue test/TonguePiece.gd" type="Script" id=4]
[ext_resource path="res://tongue test/world.gd" type="Script" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.0780181, 0.0730988, 0.0106752 )

[sub_resource type="BoxShape" id=3]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="CapsuleShape" id=6]
height = 2.04599

[sub_resource type="BoxShape" id=5]
extents = Vector3( 1, 1, 5.83706 )

[node name="tongue test" type="Spatial"]
script = ExtResource( 5 )
playerPath = NodePath("player")

[node name="player" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.60696 )
script = ExtResource( 2 )
WALK_FORCE = 9.0
WALK_MAX_SPEED = 2.25
STOP_FORCE = 13.5
gravity = 5.0
JUMP_SPEED = 2.5
jumpHoldInc = 0.375
cameraPath = NodePath("../Anchor")
latchBroTimeUp = 1.5
latchBroTimeGoTo = 0.5
latchAfterDelay = 1.5

[node name="KinematicBody" type="KinematicBody" parent="player"]

[node name="CollisionShape" type="CollisionShape" parent="player/KinematicBody"]
shape = SubResource( 1 )

[node name="icon" type="Sprite3D" parent="player/KinematicBody"]
texture = ExtResource( 1 )

[node name="TonguePiece" type="Spatial" parent="player"]
script = ExtResource( 4 )
mainPath = NodePath("..")
amountOfPieces = 1000
pieceTorque = 3.5
speed = 0.04

[node name="tongueTimer" type="Timer" parent="player"]
one_shot = true

[node name="tongueTimerBack" type="Timer" parent="player"]
one_shot = true

[node name="Anchor" type="Spatial" parent="."]
script = ExtResource( 3 )
playerPath = NodePath("../player")

[node name="Camera" type="Camera" parent="Anchor"]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 1.38816, 1.96441 )
current = true

[node name="Spatial" type="Spatial" parent="."]

[node name="pole" type="StaticBody" parent="Spatial"]
transform = Transform( 0.0463195, 0, 0, 0, 0.21908, 0, 0, 0, 0.058553, 0, 0.18457, -0.152367 )

[node name="POLEArea" type="Area" parent="Spatial/pole"]

[node name="MeshInstance3" type="CollisionShape" parent="Spatial/pole/POLEArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.37217, 0 )
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Spatial/pole"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.37217, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance2" type="CollisionShape" parent="Spatial/pole"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.37217, 0 )
shape = SubResource( 3 )

[node name="StaticBody8" type="StaticBody" parent="Spatial"]
transform = Transform( 0.261646, 0, 0, 0, 0.156086, 0, 0, 0, 1.22697, 0, -0.256215, 1.78741 )

[node name="MeshInstance" type="MeshInstance" parent="Spatial/StaticBody8"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.37217, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance2" type="CollisionShape" parent="Spatial/StaticBody8"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.37217, 0 )
shape = SubResource( 3 )

[node name="StaticBody" type="StaticBody" parent="Spatial"]

[node name="MeshInstance" type="MeshInstance" parent="Spatial/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.37217, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance2" type="CollisionShape" parent="Spatial/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.37217, 0 )
shape = SubResource( 3 )

[node name="StaticBody2" type="StaticBody" parent="Spatial"]
transform = Transform( 225.437, 0, 0, 0, 1, 0, 0, 0, 107.54, 0, 0, 10.5042 )

[node name="MeshInstance" type="MeshInstance" parent="Spatial/StaticBody2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.37217, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance2" type="CollisionShape" parent="Spatial/StaticBody2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.37217, 0 )
shape = SubResource( 3 )

[node name="StaticBody4" type="StaticBody" parent="Spatial"]
transform = Transform( 0.509468, 0, 0, 0, 0.876841, 0, 0, 0, 1, -1.89431, 1.3812, 3.76021 )

[node name="MeshInstance" type="MeshInstance" parent="Spatial/StaticBody4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.37217, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance2" type="CollisionShape" parent="Spatial/StaticBody4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.37217, 0 )
shape = SubResource( 3 )

[node name="StaticBody6" type="StaticBody" parent="Spatial"]
transform = Transform( 1.42009, 0, 0, 0, 0.876841, 0, 0, 0, 1, -3.78513, 2.31935, 3.76021 )

[node name="MeshInstance" type="MeshInstance" parent="Spatial/StaticBody6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.37217, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance2" type="CollisionShape" parent="Spatial/StaticBody6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.37217, 0 )
shape = SubResource( 3 )

[node name="StaticBody7" type="StaticBody" parent="Spatial"]
transform = Transform( 4.52321, 0, 0, 0, 0.876841, 0, 0, 0, 3.49038, -3.78513, 3.89775, 8.0656 )

[node name="MeshInstance" type="MeshInstance" parent="Spatial/StaticBody7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.37217, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance2" type="CollisionShape" parent="Spatial/StaticBody7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.37217, 0 )
shape = SubResource( 3 )

[node name="StaticBody9" type="StaticBody" parent="Spatial"]
transform = Transform( 4.52321, 0, 0, 0, 0.876841, 0, 0, 0, 3.49038, -3.78513, 4.18528, 83.7115 )

[node name="MeshInstance" type="MeshInstance" parent="Spatial/StaticBody9"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.37217, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance2" type="CollisionShape" parent="Spatial/StaticBody9"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.37217, 0 )
shape = SubResource( 3 )

[node name="StaticBody5" type="StaticBody" parent="Spatial"]
transform = Transform( 0.445244, 0, 0, 0, 0.378658, 0, 0, 0, 1, 1.83745, 0.421665, 3.76021 )

[node name="MeshInstance" type="MeshInstance" parent="Spatial/StaticBody5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.37217, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance2" type="CollisionShape" parent="Spatial/StaticBody5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.37217, 0 )
shape = SubResource( 3 )

[node name="Spatial" type="Spatial" parent="Spatial"]

[node name="Area" type="Area" parent="Spatial/Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6.31494 )

[node name="CollisionShape2" type="CollisionShape" parent="Spatial/Spatial/Area"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, -0.748373 )
shape = SubResource( 6 )

[node name="StaticBody3" type="StaticBody" parent="Spatial/Spatial"]
transform = Transform( 2.57411, 0, 0, 0, 0.57266, 0, 0, 0, 1.22697, 0, 0.625001, -7.68997 )

[node name="MeshInstance" type="MeshInstance" parent="Spatial/Spatial/StaticBody3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.09789, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance2" type="CollisionShape" parent="Spatial/Spatial/StaticBody3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.37217, 0 )
shape = SubResource( 3 )

[node name="MeshInstance3" type="MeshInstance" parent="Spatial/Spatial/StaticBody3"]
transform = Transform( 0.15777, 0, 0, 0, 1, 0, 0, 0, 1, -0.772211, -0.390834, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance4" type="CollisionShape" parent="Spatial/Spatial/StaticBody3"]
transform = Transform( 0.15777, 0, 0, 0, 1, 0, 0, 0, 1, -0.772211, 0.334881, 0 )
shape = SubResource( 3 )

[node name="MeshInstance5" type="MeshInstance" parent="Spatial/Spatial/StaticBody3"]
transform = Transform( 0.15777, 0, 0, 0, 1, 0, 0, 0, 1, 0.823096, -0.390834, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance6" type="CollisionShape" parent="Spatial/Spatial/StaticBody3"]
transform = Transform( 0.15777, 0, 0, 0, 1, 0, 0, 0, 1, 0.823096, 0.334881, 0 )
shape = SubResource( 3 )

[node name="MeshInstance7" type="MeshInstance" parent="Spatial/Spatial/StaticBody3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.59856, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance8" type="CollisionShape" parent="Spatial/Spatial/StaticBody3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.59856, 0 )
shape = SubResource( 3 )

[node name="MeshInstance9" type="MeshInstance" parent="Spatial/Spatial/StaticBody3"]
transform = Transform( 1, 0, 0, 0, 1.95529, 0, 0, 0, 0.194257, 0, 0.287737, -0.754806 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance10" type="CollisionShape" parent="Spatial/Spatial/StaticBody3"]
transform = Transform( 1, 0, 0, 0, 1.95529, 0, 0, 0, 0.194257, 0, 0.287737, -0.754806 )
shape = SubResource( 3 )

[node name="StaticBody7" type="StaticBody" parent="Spatial/Spatial"]
transform = Transform( 2.57411, 0, 0, 0, 1.11972, 0, 0, 0, 0.238347, 0, 2.32622, -8.6161 )

[node name="MeshInstance2" type="CollisionShape" parent="Spatial/Spatial/StaticBody7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, -1.37217, 3.2359 )
shape = SubResource( 5 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.04895, 0 )
omni_range = 500000.0
omni_attenuation = 1e-05

[connection signal="timeout" from="player/tongueTimer" to="player/TonguePiece" method="_on_tongueTimer_timeout"]
[connection signal="timeout" from="player/tongueTimerBack" to="player/TonguePiece" method="_on_tongueTimer_timeout"]
[connection signal="body_entered" from="Spatial/Spatial/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Spatial/Spatial/Area" to="." method="_on_Area_body_exited"]
